--- a/readme.adoc
+++ b/readme.adoc
@@ -52,18 +52,27 @@ npm i @comunica/actor-init-sparql-rdfjs
 == Testing
 
 There are some simple Unit tests at:
- https://github.com/Arquisoft/dechat_es3b/tree/master/src/test[src/test].
-
-There are also some
- https://cucumber.io/[Cucumber based tests]
- with a simple user story defined at:
- https://github.com/Arquisoft/dechat_es3b/tree/master/src/test/resources/features[src/test/resources/features].
-
-To run tests execute:
+ https://github.com/Arquisoft/dechat_es3b/tree/master/test[test].
+ 
+ To run tests execute:
 
 ----
 npm test
 ----
+
+
+There are also some
+ https://cucumber.io/[Cucumber based tests]
+ with a simple user story defined at:
+ https://github.com/Arquisoft/dechat_es3b/tree/master/features[features].
+ 
+ To run Cucumber tests execute:
+
+----
+npm run cucumber
+----
+
+
 
 
 
