--- a/adocs/02_architecture_constraints.adoc
+++ b/adocs/02_architecture_constraints.adoc
@@ -7,7 +7,7 @@
 [width="60%",options="header"]
 |==============================================
 | Constraints          | Explication
-| Solid | The chat must be decentralized using the tecnology Solid.
+| SOLID | The chat must be decentralized using the SOLID tecnology.
 | Asciidoc     | The documentation must be done using asciidoc.
 | Arc42     | The template for documentation used is Arc42.
 | Time     | The project must be finished before 05/09/2019.
