--- a/adocs/01_introduction_and_goals.adoc
+++ b/adocs/01_introduction_and_goals.adoc
@@ -2,7 +2,7 @@
 
 == Introduction and goals
 
-image:https://github.com/Arquisoft/dechat_es3b/blob/master/adocs/images/Logo.jpeg[]
+image:https://raw.githubusercontent.com/Arquisoft/dechat_es3b/master/adocs/images/Logo.jpeg[]
 
 ****
 The main goal of this project is to create a decentralized chat, better said, an application or program through two or more people can communicate in a way that all the information does not pass through any external server, avoiding confidentiality losing of the data, allowing real private conversations.
